add: project skeleton loader

--- a/src/app/features/projects/components/projects-not-found/projects-not-found.component.html
+++ b/src/app/features/projects/components/projects-not-found/projects-not-found.component.html
@@ -1,1 +1,4 @@
-<div>Projects with this criteria not founded</div>
+<div class="p-d-flex p-flex-column p-jc-center p-ai-center">
+  <i class="pi pi-search not-found-icon"></i>
+  <p class="not-found-text">Projects with this criteria were not found.</p>
+</div>
