feat: adjust some styles

--- a/src/app/features/projects/components/projects-not-found/projects-not-found.component.html
+++ b/src/app/features/projects/components/projects-not-found/projects-not-found.component.html
@@ -1,4 +1,3 @@
-<div class="p-d-flex p-flex-column p-jc-center p-ai-center">
-  <i class="pi pi-search not-found-icon"></i>
-  <p class="not-found-text">Projects with this criteria were not found.</p>
+<div class="flex">
+  <h2>Projects with this criteria were not found</h2>
 </div>
