--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -1,6 +1,6 @@
 @if (selectedProject() && !isLoading()) {
-  <p-card>
-    <div class="flex column-gap-1 align-items-center">
+  <p-card class="p-0">
+    <div class="flex column-gap-5 align-items-center">
       <img
         class="block border-round"
         alt="Project"
@@ -9,6 +9,7 @@
       <div class="text-base">{{ selectedProject()?.description }}</div>
     </div>
   </p-card>
+
   <div class="flex flex-column gap-3">
     <div class="flex justify-content-between">
       <app-create-position-dialog
@@ -25,7 +26,7 @@
               <div class="text-xl font-bold">Participants</div>
             </div>
           </ng-template>
-          <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
+          <p-scrollPanel [style]="{ width: '100%', height: '40vh' }">
             <div class="flex flex-column gap-2">
               @for (
                 participant of selectedProject()?.participants;
@@ -51,7 +52,7 @@
         </ng-template>
         <p-scrollPanel
           class="h-28rem"
-          [style]="{ width: '100%', height: '50vh' }"
+          [style]="{ width: '100%', height: '40vh' }"
         >
           @for (position of store.positions(); track $index) {
             <app-position-line [position]="position" />
