add: query for similar positions

--- a/src/app/features/positions/components/position-filter/position-filter.component.html
+++ b/src/app/features/positions/components/position-filter/position-filter.component.html
@@ -7,9 +7,10 @@
   </div>
 
   <div class="p-col">
-    <div class="p-fluid p-input-icon-left">
+    <div class="w-full p-input-icon-left">
       <i class="pi pi-search"></i>
       <input
+        class="w-full"
         formControlName="term"
         placeholder="Search by term"
         type="text"
