--- a/src/app/features/positions/components/position-line/position-line.component.html
+++ b/src/app/features/positions/components/position-line/position-line.component.html
@@ -3,7 +3,7 @@
     <div>
       <span
         (click)="navigateToPositionPage()"
-        class="text-xl underline cursor-pointer"
+        class="text underline cursor-pointer"
         >{{ position.title }}</span
       >
       <span> at </span>
